# mineclicker

./: LICENSE  LICENSE.md  README.md  pyproject.toml
src/mineclicker/: __main__.py  lib.py
tests/test_mineclicker/: test_MineClicker.py
